@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2018,v 1.2923 2018/06/20 09:29:59 jperkin Exp $
+$NetBSD: CHANGES-2018,v 1.2924 2018/06/20 11:15:44 mef Exp $
 
 Changes to the packages collection and infrastructure in 2018:
 
@@ -4158,3 +4158,5 @@ Changes to the packages collection and infrastructure in 2018:
 	Added math/p5-Math-Systems version 0.01 [mef 2018-06-20]
 	Updated security/libgcrypt to 1.8.3 [adam 2018-06-20]
 	Updated pkgtools/pkgin to 0.11.2 [jperkin 2018-06-20]
+	Added editors/emacs26 version 26.1 [makoto 2018-06-20]
+	Added editors/emacs26-nox11 version 26.1 [makoto 2018-06-20]
